--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -268,6 +268,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add"
+        app:fabSize="mini"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_anchor="@id/appbar"
@@ -279,6 +280,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_minus"
+        app:fabSize="mini"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_anchor="@id/appbar"
