--- a/app/src/main/res/layout/activity_tvshow.xml
+++ b/app/src/main/res/layout/activity_tvshow.xml
@@ -98,7 +98,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginLeft="15dp"
                     android:gravity="center_vertical"
-                    android:text="@string/imdb_raiting" />
+                    android:text="@string/raiting" />
 
             </LinearLayout>
 
@@ -346,6 +346,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add"
+        app:fabSize="mini"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_anchor="@id/appbar"
@@ -357,6 +358,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_minus"
+        app:fabSize="mini"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_anchor="@id/appbar"
