--- a/app/src/main/res/layout/version_dialog.xml
+++ b/app/src/main/res/layout/version_dialog.xml
@@ -17,12 +17,13 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="170dp"
     android:paddingEnd="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingStart="16dp" >
+    android:paddingStart="16dp">
 
     <ImageView
         android:id="@+id/logo"
@@ -79,10 +80,21 @@
         android:textSize="14sp"
         android:text="@string/copyright" />
 
+    <ImageView
+        android:id="@+id/tmdb_logo"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/copyright"
+        app:srcCompat="@drawable/ic_tmdb_stacked_blue"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/copyright"
+        android:layout_toEndOf="@id/tmdb_logo"
+        android:layout_toRightOf="@id/tmdb_logo"
+        android:layout_marginLeft="5dp"
         android:ellipsize="end"
         android:textColor="@color/colorGray"
         android:textSize="14sp"
