--- a/app/src/main/res/layout/version_dialog.xml
+++ b/app/src/main/res/layout/version_dialog.xml
@@ -27,10 +27,10 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="100dp"
+        android:layout_width="75dp"
         android:layout_height="55dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/movies"/>
+        app:srcCompat="@drawable/ic_clapperboard"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
