--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -50,11 +50,11 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/settings" />
+            android:title="@string/menu_option_settings" />
         <item
             android:id="@+id/nav_feedback"
             android:icon="@drawable/ic_menu_send"
-            android:title="@string/feedback" />
+            android:title="@string/menu_option_feedback" />
     </group>
 
 </menu>
