Fix lint errors

--- a/app/src/main/res/drawable/touch_effect.xml
+++ b/app/src/main/res/drawable/touch_effect.xml
@@ -15,7 +15,9 @@
      limitations under the License.
  -->
 <ripple
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#FFFFFF">
+    android:color="#FFFFFF"
+    tools:targetApi="21" >
     <item android:drawable="@color/trailerColor" />
 </ripple>
