--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -88,12 +88,14 @@
                     android:id="@+id/text_popularity"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
                     android:gravity="center_vertical" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginStart="15dp"
                     android:layout_marginLeft="15dp"
                     android:gravity="center_vertical"
                     android:text="@string/popularity" />
@@ -146,6 +148,7 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
                             android:layout_marginLeft="10dp"
                             android:orientation="vertical">
 
