--- a/app/src/main/res/layout/activity_tvshow.xml
+++ b/app/src/main/res/layout/activity_tvshow.xml
@@ -149,6 +149,7 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
                             android:layout_marginLeft="10dp"
                             android:orientation="vertical">
 
@@ -179,7 +180,7 @@
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
-                                    android:gravity="left"
+                                    android:gravity="start"
                                     android:text="@string/languages"/>
                                 <TextView
                                     android:id="@+id/status"
@@ -187,7 +188,7 @@
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
-                                    android:gravity="left"
+                                    android:gravity="start"
                                     android:text="@string/status" />
                             </LinearLayout>
                             <LinearLayout
@@ -200,7 +201,7 @@
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
-                                    android:gravity="left"
+                                    android:gravity="start"
                                     android:text="@string/date" />
                                 <TextView
                                     android:id="@+id/last_air_date"
@@ -208,7 +209,7 @@
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
-                                    android:gravity="left"
+                                    android:gravity="start"
                                     android:text="@string/date" />
                             </LinearLayout>
                             <LinearLayout
@@ -221,7 +222,7 @@
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
-                                    android:gravity="left"
+                                    android:gravity="start"
                                     android:text="@string/seasons" />
                                 <TextView
                                     android:id="@+id/num_episodes"
@@ -229,7 +230,7 @@
                                     android:layout_width="0dp"
                                     android:layout_weight="1"
                                     android:layout_height="wrap_content"
-                                    android:gravity="left"
+                                    android:gravity="start"
                                     android:text="@string/episodes"/>
                             </LinearLayout>
 
@@ -239,7 +240,7 @@
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:layout_height="0dp"
-                                android:gravity="left" />
+                                android:gravity="start" />
 
                             <TextView
                                 android:id="@+id/homepage"
