--- a/app/src/main/res/layout/credit_list_item.xml
+++ b/app/src/main/res/layout/credit_list_item.xml
@@ -26,7 +26,7 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:gravity="left"
+        android:gravity="start"
         android:text="@string/date"/>
 
     <TextView
@@ -35,7 +35,7 @@
         android:layout_width="0dp"
         android:layout_weight="2"
         android:layout_height="wrap_content"
-        android:gravity="left"
+        android:gravity="start"
         android:text="@string/title"/>
 
     <TextView
@@ -44,7 +44,7 @@
         android:layout_width="0dp"
         android:layout_weight="2"
         android:layout_height="wrap_content"
-        android:gravity="left"
+        android:gravity="start"
         android:text="@string/character" />
 
 </LinearLayout>
