modifying sign in page

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,17 +12,23 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <!--  Email Label -->
+        <ImageView android:src="@mipmap/ic_launcher"
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:layout_marginBottom="24dp"
+            android:layout_gravity="center_horizontal" />
+
+        <!-- Name Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_email"
+            <EditText android:id="@+id/input_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:hint="@string/email" />
+                android:inputType="textPersonName"
+                android:hint="@string/user_name" />
         </android.support.design.widget.TextInputLayout>
 
         <!--  Password Label -->
