Adding rating task

--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -401,13 +401,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_anchor="@id/appbar"
+        android:layout_margin="@dimen/fab_margin"
         app:layout_anchorGravity="bottom|right|end">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
+            android:layout_marginRight="8dp"
             android:clickable="true"
             app:fabSize="mini"
             app:srcCompat="@drawable/ic_play_arrow_black_24dp" />
@@ -416,10 +417,9 @@
             android:id="@+id/fab_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
+            android:layout_toRightOf="@id/fab_play"
             android:clickable="true"
             android:visibility="invisible"
-            android:layout_toRightOf="@id/fab_play"
             app:fabSize="mini"
             app:layout_anchorGravity="bottom|right|end"
             app:srcCompat="@drawable/fab_plus" />
@@ -428,11 +428,10 @@
             android:id="@+id/fab_minus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
+            android:layout_toRightOf="@id/fab_play"
             android:clickable="true"
             android:visibility="invisible"
             app:fabSize="mini"
-            android:layout_toRightOf="@id/fab_play"
             app:layout_anchorGravity="bottom|right|end"
             app:srcCompat="@drawable/fab_minus" />
     </RelativeLayout>
